Fix word spacing for GSAP SplitText spans on desktop
Agent-Logs-Url: https://github.com/eddy437/MY-PORTFOLIO/sessions/11c70715-775a-4f25-b787-c8c8623a7e7b

--- a/src/components/styles/About.css
+++ b/src/components/styles/About.css
@@ -63,8 +63,9 @@
     font-size: 1.9vw;
     line-height: 2.3vw;
   }
-  .split-line {
-    word-spacing: 0.3vw;
+  .split-line span {
+    display: inline-block;
+    margin-right: 0.3vw;
   }
 }
 
@@ -73,7 +74,7 @@
     font-size: 2.5rem;
     line-height: 2.7rem;
   }
-  .split-line {
-    word-spacing: 0.3rem;
+  .split-line span {
+    margin-right: 0.3rem;
   }
 }
